[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Abdulbasitali3698 <43988292+Abdulbasitali3698@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
